# opengl_start

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
